build/log/idf_py_stdout_output_325669
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/tu/esp/health_monitoring_wristband/build/bootloader/esp-idf/esptool_py && /home/tu/.espressif/python_env/idf5.5_py3.10_env/bin/python /home/tu/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/tu/esp/health_monitoring_wristband/build/bootloader/bootloader.bin
Bootloader binary size 0x5210 bytes. 0x2df0 bytes (36%) free.
[2/8] Building C object esp-idf/http_server_app/CMakeFiles/__idf_http_server_app.dir/http_server_app.c.obj
FAILED: esp-idf/http_server_app/CMakeFiles/__idf_http_server_app.dir/http_server_app.c.obj 
/home/tu/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20250730/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1-418-gf1a1df9b2e\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/tu/esp/health_monitoring_wristband/build/config -I/home/tu/esp/health_monitoring_wristband/components/http_server_app/include -I/home/tu/esp/esp-idf/components/newlib/platform_include -I/home/tu/esp/esp-idf/components/freertos/config/include -I/home/tu/esp/esp-idf/components/freertos/config/include/freertos -I/home/tu/esp/esp-idf/components/freertos/config/riscv/include -I/home/tu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/tu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/tu/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/tu/esp/esp-idf/components/freertos/esp_additions/include -I/home/tu/esp/esp-idf/components/esp_hw_support/include -I/home/tu/esp/esp-idf/components/esp_hw_support/include/soc -I/home/tu/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/tu/esp/esp-idf/components/esp_hw_support/dma/include -I/home/tu/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/tu/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/tu/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/tu/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/tu/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/tu/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -I/home/tu/esp/esp-idf/components/esp_hw_support/port/esp32c3/include -I/home/tu/esp/esp-idf/components/heap/include -I/home/tu/esp/esp-idf/components/heap/tlsf -I/home/tu/esp/esp-idf/components/log/include -I/home/tu/esp/esp-idf/components/soc/include -I/home/tu/esp/esp-idf/components/soc/esp32c3 -I/home/tu/esp/esp-idf/components/soc/esp32c3/include -I/home/tu/esp/esp-idf/components/soc/esp32c3/register -I/home/tu/esp/esp-idf/components/hal/platform_port/include -I/home/tu/esp/esp-idf/components/hal/esp32c3/include -I/home/tu/esp/esp-idf/components/hal/include -I/home/tu/esp/esp-idf/components/esp_rom/include -I/home/tu/esp/esp-idf/components/esp_rom/esp32c3/include -I/home/tu/esp/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -I/home/tu/esp/esp-idf/components/esp_rom/esp32c3 -I/home/tu/esp/esp-idf/components/esp_common/include -I/home/tu/esp/esp-idf/components/esp_system/include -I/home/tu/esp/esp-idf/components/esp_system/port/soc -I/home/tu/esp/esp-idf/components/esp_system/port/include/riscv -I/home/tu/esp/esp-idf/components/esp_system/port/include/private -I/home/tu/esp/esp-idf/components/riscv/include -I/home/tu/esp/esp-idf/components/lwip/include -I/home/tu/esp/esp-idf/components/lwip/include/apps -I/home/tu/esp/esp-idf/components/lwip/include/apps/sntp -I/home/tu/esp/esp-idf/components/lwip/lwip/src/include -I/home/tu/esp/esp-idf/components/lwip/port/include -I/home/tu/esp/esp-idf/components/lwip/port/freertos/include -I/home/tu/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/tu/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/tu/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/tu/esp/esp-idf/components/driver/deprecated -I/home/tu/esp/esp-idf/components/driver/i2c/include -I/home/tu/esp/esp-idf/components/driver/touch_sensor/include -I/home/tu/esp/esp-idf/components/driver/twai/include -I/home/tu/esp/esp-idf/components/esp_pm/include -I/home/tu/esp/esp-idf/components/esp_ringbuf/include -I/home/tu/esp/esp-idf/components/esp_driver_gpio/include -I/home/tu/esp/esp-idf/components/esp_driver_pcnt/include -I/home/tu/esp/esp-idf/components/esp_driver_gptimer/include -I/home/tu/esp/esp-idf/components/esp_driver_spi/include -I/home/tu/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/tu/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/tu/esp/esp-idf/components/esp_driver_i2s/include -I/home/tu/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/tu/esp/esp-idf/components/sdmmc/include -I/home/tu/esp/esp-idf/components/esp_driver_sdspi/include -I/home/tu/esp/esp-idf/components/esp_driver_sdio/include -I/home/tu/esp/esp-idf/components/esp_driver_dac/include -I/home/tu/esp/esp-idf/components/esp_driver_rmt/include -I/home/tu/esp/esp-idf/components/esp_driver_tsens/include -I/home/tu/esp/esp-idf/components/esp_driver_sdm/include -I/home/tu/esp/esp-idf/components/esp_driver_i2c/include -I/home/tu/esp/esp-idf/components/esp_driver_uart/include -I/home/tu/esp/esp-idf/components/vfs/include -I/home/tu/esp/esp-idf/components/esp_driver_ledc/include -I/home/tu/esp/esp-idf/components/esp_driver_parlio/include -I/home/tu/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/tu/esp/esp-idf/components/esp_driver_twai/include -I/home/tu/esp/esp-idf/components/esp_wifi/include -I/home/tu/esp/esp-idf/components/esp_wifi/include/local -I/home/tu/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/tu/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/tu/esp/esp-idf/components/esp_event/include -I/home/tu/esp/esp-idf/components/esp_phy/include -I/home/tu/esp/esp-idf/components/esp_phy/esp32c3/include -I/home/tu/esp/esp-idf/components/esp_netif/include -I/home/tu/esp/esp-idf/components/esp_http_server/include -I/home/tu/esp/esp-idf/components/http_parser -I/home/tu/esp/esp-idf/components/esp_timer/include -I/home/tu/esp/health_monitoring_wristband/components/max30100/include -I/home/tu/esp/health_monitoring_wristband/components/i2c_bus/include -I/home/tu/esp/esp-idf/examples/storage/sd_card/sdmmc/components/sd_card -I/home/tu/esp/esp-idf/components/fatfs/diskio -I/home/tu/esp/esp-idf/components/fatfs/src -I/home/tu/esp/esp-idf/components/fatfs/vfs -I/home/tu/esp/esp-idf/components/wear_levelling/include -I/home/tu/esp/esp-idf/components/esp_partition/include -I/home/tu/esp/esp-idf/components/esp_adc/include -I/home/tu/esp/esp-idf/components/esp_adc/interface -I/home/tu/esp/esp-idf/components/esp_adc/esp32c3/include -I/home/tu/esp/esp-idf/components/esp_adc/deprecated/include -march=rv32imc_zicsr_zifencei  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/tu/esp/health_monitoring_wristband=. -fmacro-prefix-map=/home/tu/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/http_server_app/CMakeFiles/__idf_http_server_app.dir/http_server_app.c.obj -MF esp-idf/http_server_app/CMakeFiles/__idf_http_server_app.dir/http_server_app.c.obj.d -o esp-idf/http_server_app/CMakeFiles/__idf_http_server_app.dir/http_server_app.c.obj -c /home/tu/esp/health_monitoring_wristband/components/http_server_app/http_server_app.c
/home/tu/esp/health_monitoring_wristband/components/http_server_app/http_server_app.c: In function 'alerts_handler':
/home/tu/esp/health_monitoring_wristband/components/http_server_app/http_server_app.c:135:33: error: 'ALERT_HISTORY_SIZE' undeclared (first use in this function)
  135 |     alert_event_t local_history[ALERT_HISTORY_SIZE];
      |                                 ^~~~~~~~~~~~~~~~~~
/home/tu/esp/health_monitoring_wristband/components/http_server_app/http_server_app.c:135:33: note: each undeclared identifier is reported only once for each function it appears in
/home/tu/esp/health_monitoring_wristband/components/http_server_app/http_server_app.c:135:19: warning: unused variable 'local_history' [-Wunused-variable]
  135 |     alert_event_t local_history[ALERT_HISTORY_SIZE];
      |                   ^~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
